<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context="com.example.shehabsalah.mobile_app_project.UserLoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="onClick"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@mipmap/a1"
        android:id="@+id/relatlayout">


        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="15"
            android:id="@+id/mail"
            android:layout_above="@+id/password"
            android:hint="@string/mail"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_alignRight="@+id/password"
            android:layout_alignEnd="@+id/password" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:hint="@string/pass"
            android:layout_marginBottom="35dp"
            android:layout_above="@+id/btnLogin"
            android:layout_centerHorizontal="true" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/password"
            android:layout_alignEnd="@+id/password" />

        <!-- Link to Login Screen -->

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/password"
            android:layout_alignStart="@+id/password"
            android:layout_alignTop="@+id/btnLogin"/>

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginprogressBar2"
            android:layout_alignTop="@+id/mail"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</FrameLayout>
