<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="#ffffff"
    tools:context=".NotificationsActivity">


    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notificationList"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="50dp"/>

    <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:paddingTop="0dp"
        android:paddingBottom="0dp">
        <LinearLayout android:id="@+id/fullscreen_header_controls" style="?metaButtonBarStyle"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="top|center_horizontal"
            android:scaleType="fitCenter"
            android:background="#1b81c2" android:orientation="horizontal"
            tools:ignore="UselessParent"
            android:paddingTop="0dp"
            android:paddingBottom="0dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:id="@+id/logo"
                    android:src="@mipmap/logo"
                    android:layout_marginLeft="15dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:contentDescription="@string/Logo" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:scaleType="fitCenter"
            android:background="#242424" android:orientation="horizontal"
            tools:ignore="UselessParent"
            android:paddingTop="0dp"
            android:paddingBottom="0dp">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:id="@+id/NhomeButton"
                android:src="@mipmap/home"
                android:scaleType="fitCenter"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:baselineAlignBottom="true"
                android:contentDescription="@string/homeActiveButton" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:id="@+id/NcameraButton"
                android:src="@mipmap/camera"
                android:scaleType="fitCenter"
                android:baselineAlignBottom="true"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp"
                android:contentDescription="@string/cameraButton" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:id="@+id/NprofileButton"
                android:src="@mipmap/profile"
                android:scaleType="fitCenter"
                android:baselineAlignBottom="true"
                android:layout_marginTop="0dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_marginBottom="0dp"
                android:contentDescription="@string/profileButton" />

        </LinearLayout>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/NInternet"
            android:layout_gravity="center"
            android:contentDescription="@string/internet_txt"/>

    </FrameLayout>

</FrameLayout>
