<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.shehabsalah.mobile_app_project.RegisterActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/bg_register"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_name"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <Spinner
                android:id="@+id/cntry"
                android:layout_width="@dimen/signwidth"
                android:layout_height="50dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"
                />

            <Spinner
                android:id="@+id/faculty"
                android:layout_width="@dimen/signwidth"
                android:layout_height="50dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/gender"
                android:layout_width="@dimen/signwidth"
                android:layout_height="50dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <!-- Login Button -->

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="#ea4c88"
                android:text="@string/btn_register"
                android:textColor="@color/white" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btnLinkToLoginScreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:background="@null"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
